--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
             // Show console for debugging (Removed)
             // floatingConsole.style.opacity = '1';
 
-            const SMITH_FAMILY_ARTICLE_BASE_URL = `https://deyiksanjaya.github.io/atma/smith-family`;
+            const SMITH_FAMILY_ARTICLE_BASE_URL = `smith-family.html`;
 
             const mockNewsArticles = [
                 {
