--- a/index.html
+++ b/index.html
@@ -334,28 +334,6 @@
             flex-shrink: 0;
             margin-right: 16px;
         }
-
-        /* Floating Console Styles (Removed) */
-        /* #floatingConsole {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background-color: rgba(0, 0, 0, 0.8);
-            color: limegreen;
-            padding: 10px;
-            border-radius: 5px;
-            font-family: monospace;
-            font-size: 0.8em;
-            z-index: 9999;
-            width: 250px;
-            max-height: 150px;
-            overflow-y: auto;
-            border: 1px solid #333;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            display: block;
-            opacity: 0;
-            transition: opacity 0.3s ease-in-out;
-        } */
     </style>
 </head>
 <body class="bg-white text-gray-900">
@@ -475,13 +453,6 @@
         </div>
     </footer>
 
-    <!-- Floating Console for Debugging (Removed) -->
-    <!-- <div id="floatingConsole" style="opacity: 0; transition: opacity 0.3s ease-in-out;">
-        <strong>Debug Console:</strong><br>
-        Actual Input: <span id="debugActualInput"></span><br>
-        Display Input: <span id="debugDisplayInput"></span>
-    </div> -->
-
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
             const defaultHomepageContent = document.getElementById('defaultHomepageContent');
@@ -494,14 +465,7 @@
             const secondarySearchInput = document.getElementById('secondarySearchInput');
             const secondarySearchButton = document.getElementById('secondarySearchButton');
 
-            // Debug console elements (Removed)
-            // const floatingConsole = document.getElementById('floatingConsole');
-            // const debugActualInput = document.getElementById('debugActualInput');
-            // const debugDisplayInput = document.getElementById('debugDisplayInput');
-
-            // Show console for debugging (Removed)
-            // floatingConsole.style.opacity = '1';
-
+            // MODIFIED: Changed base URL to a relative path
             const SMITH_FAMILY_ARTICLE_BASE_URL = `smith-family.html`;
 
             const mockNewsArticles = [
@@ -693,12 +657,21 @@
 
                     const articleCategory = article.category ? article.category.toUpperCase() : 'BERITA UMUM';
 
+                    let linkHtml;
+                    // Special handling for the Smith Family article to redirect back to cnn.com
+                    if (article.title === "Tragedi Keluarga Smith: Anak Dibunuh, Jasadnya Menghilang") {
+                        linkHtml = `<a href="${article.url}" class="read-more" onclick="handleSmithFamilyClick(event, '${article.url}')">Baca Selengkapnya</a>`;
+                    } else {
+                        // Standard handling for other articles, opening in a new tab
+                        linkHtml = `<a href="${article.url || '#'}" class="read-more" target="_blank">Baca Selengkapnya</a>`;
+                    }
+
                     card.innerHTML = `
                         <div class="article-card-content">
                             <span class="category">${articleCategory}</span>
                             <h3>${article.title || 'Judul Tidak Tersedia'}</h3>
                             <p>${article.description || 'Deskripsi tidak tersedia.'}</p>
-                            <a href="${article.url || '#'}" class="read-more" target="_blank">Baca Selengkapnya</a>
+                            ${linkHtml}
                         </div>
                     `;
                     return card;
@@ -738,6 +711,15 @@
                 }
             }
 
+            // Global function to be called by onclick for the Smith Family article
+            window.handleSmithFamilyClick = function(event, targetUrl) {
+                event.preventDefault(); // Prevent default link navigation
+                // Replace current history state (this page) with cnn.com
+                history.replaceState(null, '', 'https://www.cnn.com');
+                // Navigate to the smith-family.html page
+                window.location.href = targetUrl;
+            };
+
             function translateInputForSecretId(input) {
                 let translated = '';
                 const maxLength = 6; 
@@ -770,12 +752,6 @@
             const prewrittenText = "keluarga smith";
             let actualUserInput = '';
 
-            // Function to update the floating console (Removed)
-            // function updateFloatingConsole() {
-            //     debugActualInput.textContent = actualUserInput;
-            //     debugDisplayInput.textContent = secondarySearchInput.value;
-            // }
-
             // Using 'beforeinput' for more control over input composition
             secondarySearchInput.addEventListener('beforeinput', (event) => {
                 // Prevent default behavior for all input types we want to control
@@ -798,8 +774,6 @@
                 // Maintain cursor position
                 const cursorPosition = secondarySearchInput.value.length;
                 secondarySearchInput.setSelectionRange(cursorPosition, cursorPosition);
-
-                // updateFloatingConsole(); // Update console on beforeinput (Removed)
             });
 
             // The 'input' event listener can now be simpler, mostly for fallback or ensuring consistency
@@ -812,7 +786,6 @@
                     const cursorPosition = secondarySearchInput.value.length;
                     secondarySearchInput.setSelectionRange(cursorPosition, cursorPosition);
                 }
-                // updateFloatingConsole(); // Update console on input (Removed)
             });
 
             // Keydown is primarily for non-character keys like Enter to trigger search
@@ -840,11 +813,7 @@
                 
                 secondarySearchInput.value = '';
                 actualUserInput = '';
-                // updateFloatingConsole(); // Clear console after search (Removed)
             });
-
-            // Initial update of the console (Removed)
-            // updateFloatingConsole();
         });
     </script>
 </body>
