--- a/smith-family.html
+++ b/smith-family.html
@@ -164,15 +164,30 @@
             background-color: #000;
         }
 
+        /* Styles for images in the article block (cropped from top) */
+        .article-image-block img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Crop and fill the container */
+            object-position: top; /* Ensure cropping is from the top */
+            display: block;
+            pointer-events: none; /* Prevent direct interaction like right-click or long-press */
+        }
+
+        /* Styles for images in the gallery content (full view) */
         .gallery-content img {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            object-fit: contain;
-            object-position: top;
+            object-fit: contain; /* Show full image, fit within container */
+            object-position: center; /* Center the image */
             display: block;
+            pointer-events: none; /* Prevent direct interaction like right-click or long-press */
         }
 
         .close-button {
@@ -249,11 +264,11 @@
 
             <!-- Video/Image Placeholder - Modified to span full width and remove rounded corners -->
             <!-- Using w-screen and ml-[calc(50%-50vw)] to make it span full viewport width -->
-            <figure class="relative w-screen h-0 pb-[56.25%] bg-gray-300 overflow-hidden mb-8
-                           ml-[calc(50%-50vw)]" id="articleImageContainer">
+            <figure class="relative w-screen h-0 pb-[75%] bg-gray-300 overflow-hidden mb-8
+                           ml-[calc(50%-50vw)] article-image-block" id="articleImageContainer">
                 <!-- Placeholder for video/image content -->
-                <img id="image2" src="image2.jpg" alt="Potret keluarga vintage 2" class="absolute inset-0 w-full h-full object-cover" style="object-position: top;">
-                <img id="image1" src="image1.jpg" alt="Potret keluarga vintage 1" class="absolute inset-0 w-full h-full object-cover" style="object-position: top;">
+                <img id="image2" src="image2.jpg" alt="Potret keluarga vintage 2" class="absolute inset-0 w-full h-full object-cover" style="object-position: top;" oncontextmenu="return false;" ondragstart="return false;" draggable="false">
+                <img id="image1" src="image1.jpg" alt="Potret keluarga vintage 1" class="absolute inset-0 w-full h-full object-cover" style="object-position: top;" oncontextmenu="return false;" ondragstart="return false;" draggable="false">
                 <figcaption class="absolute bottom-0 left-0 w-full bg-white bg-opacity-80 p-2 text-xs text-gray-600">
                     Potret keluarga Smith pasca kepergian putri keempatnya.
                 </figcaption>
@@ -354,8 +369,8 @@
     <div id="galleryOverlay" class="gallery-overlay">
         <span class="close-button">&times;</span>
         <div class="gallery-content">
-            <img id="galleryImage2" src="image2.jpg" alt="Full size image 2">
-            <img id="galleryImage1" src="image1.jpg" alt="Full size image 1">
+            <img id="galleryImage2" src="image2.jpg" alt="Full size image 2" oncontextmenu="return false;" ondragstart="return false;" draggable="false">
+            <img id="galleryImage1" src="image1.jpg" alt="Full size image 1" oncontextmenu="return false;" ondragstart="return false;" draggable="false">
         </div>
     </div>
 
