--- a/smith-family.html
+++ b/smith-family.html
@@ -376,9 +376,8 @@
 
     <script type="module">
         document.addEventListener('DOMContentLoaded', async () => {
-            // Template string untuk konten artikel
             const articleContentTemplate = `
-            <p>Jakarta, CNN Indonesia -- Seorang remaja perempuan berusia 12 tahun ditemukan tewas secara tidak wajar di kediaman keluarga Smith, tepatnya di \${lokasi}, Sabtu malam (17/01/1924). Korban diketahui bernama \${namaKorban} Smith, putri keempat dari dua belas bersaudara. Insiden terjadi hanya beberapa jam sebelum keluarga tersebut dijadwalkan menjalani sesi foto tahunan mereka di teras rumah.</p>
+            <p>Jakarta, CNN Indonesia -- Seorang remaja perempuan berusia 12 tahun ditemukan tewas secara tidak wajar di kediaman keluarga Smith, tepatnya di \${lokasi}, Sabtu malam (17/01/1924). Korban diketahui bernama \${namaKorban} Smith, putri keempat dari keluarga besar Smith. Insiden terjadi hanya beberapa jam sebelum keluarga tersebut dijadwalkan menjalani sesi foto tahunan mereka di teras rumah.</p>
 
             <p>Menurut laporan kepolisian, jasad \${namaKorban} ditemukan dalam kondisi mengenaskan. Dugaan awal menunjukkan korban mengalami luka fatal akibat serangan menggunakan \${alat}. Di lokasi kejadian, petugas menemukan sebuah topeng tua yang berlumuran darah kering. Pada bagian dalam topeng itu, terdapat goresan menyerupai simbol atau tulisan kuno yang belum dapat diidentifikasi.</p>
 
@@ -389,8 +388,8 @@
 
             <p>Keluarga Smith juga menolak memberikan keterangan mendetail kepada media. Namun dalam pernyataan singkat, mereka menyatakan telah menyerahkan sepenuhnya penyelidikan kepada otoritas yang berwenang.</p>
 
-            <h3 class="text-lg font-bold mb-4 mt-6">Sesi Foto dengan Ruang Kosong</h3>
-            <p>Meski dalam suasana duka dan belum mendapat kepastian hukum, keluarga Smith tetap menjalani sesi foto keluarga seperti yang telah dijadwalkan. Dalam formasi berdiri, mereka menyisakan sedikit ruang kosong di tengah barisan sebagai bentuk penghormatan terhadap \${namaKorban}.</p>
+            <h3 class="text-lg font-bold mb-4 mt-6">Sesi Foto Tetap Dilakukan</h3>
+            <p>Meski dalam suasana duka dan belum mendapat kepastian hukum, keluarga Smith tetap menjalani sesi foto keluarga seperti yang telah dijadwalkan untuk menghormati mendiang. Dalam formasi berdiri, mereka menyisakan sedikit ruang kosong di tengah barisan sebagai bentuk penghormatan terhadap \${namaKorban}.</p>
 
             <p>Beberapa hari setelah foto dicetak, muncul laporan bahwa siluet samar menyerupai wajah \${namaKorban} tampak di posisi ruang kosong tersebut. Tidak ada keterangan resmi terkait dugaan ini. Namun sumber keluarga menyebutkan bahwa cetakan foto tersebut telah dimusnahkan karena menimbulkan gangguan psikologis pada beberapa anggota keluarga.</p>
 
