--- a/smith-family.html
+++ b/smith-family.html
@@ -389,7 +389,7 @@
             <p>Keluarga Smith juga menolak memberikan keterangan mendetail kepada media. Namun dalam pernyataan singkat, mereka menyatakan telah menyerahkan sepenuhnya penyelidikan kepada otoritas yang berwenang.</p>
 
             <h3 class="text-lg font-bold mb-4 mt-6">Sesi Foto Tetap Dilakukan</h3>
-            <p>Meski dalam suasana duka dan belum mendapat kepastian hukum, keluarga Smith tetap menjalani sesi foto keluarga seperti yang telah dijadwalkan untuk menghormati mendiang. Dalam formasi berdiri, mereka menyisakan sedikit ruang kosong di tengah barisan sebagai bentuk penghormatan terhadap \${namaKorban}.</p>
+            <p>Meski dalam suasana duka dan belum mendapat kepastian hukum, keluarga Smith tetap menjalani sesi foto keluarga seperti yang telah dijadwalkan untuk menghormati mendiang. Saat waktu pemotretan tiba, mereka menyisakan sedikit ruang kosong di tengah barisan seolah-olah \${namaKorban} juga ikut berfoto bersama.</p>
 
             <p>Beberapa hari setelah foto dicetak, muncul laporan bahwa siluet samar menyerupai wajah \${namaKorban} tampak di posisi ruang kosong tersebut. Tidak ada keterangan resmi terkait dugaan ini. Namun sumber keluarga menyebutkan bahwa cetakan foto tersebut telah dimusnahkan karena menimbulkan gangguan psikologis pada beberapa anggota keluarga.</p>
 
