--- a/smith-family.html
+++ b/smith-family.html
@@ -216,7 +216,7 @@
 
     <!-- Header -->
     <header id="mainHeader" class="flex items-center justify-between py-2 bg-white sticky top-0 z-10 px-4 sm:px-6 lg:px-8">
-        <div class="flex items-center space-x-4 max-w-4xl mx-auto w-full">
+        <div class="flex items-center space-x-2 max-w-4xl mx-auto w-full">
             <button class="text-gray-600 focus:outline-none">
                 <!-- Ikon menu diganti dengan gambar menu.png -->
                 <img src="menu.png" alt="Menu Icon" class="w-6 h-6" oncontextmenu="return false;" ondragstart="return false;" draggable="false">
@@ -232,11 +232,11 @@
         <article>
             <!-- Breadcrumbs and Read Time -->
             <div class="flex items-center text-xs text-gray-500 mt-4 mb-4">
-                <span class="font-semibold">KRIMINAL</span>
+                <span class="font-semibold">WORLD</span>
                 <svg class="w-3 h-3 mx-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path>
                 </svg>
-                <span>AMERIKA SERIKAT</span>
+                <span>AMERIKA</span>
                 <span class="mx-2">•</span>
                 <span>5 MIN READ</span> <!-- Adjusted read time -->
             </div>
@@ -387,10 +387,10 @@
 
             <p>Keluarga Smith juga menolak memberikan keterangan mendetail kepada media. Namun dalam pernyataan singkat, mereka menyatakan telah menyerahkan sepenuhnya penyelidikan kepada otoritas yang berwenang.</p>
 
-            <h3 class="text-lg font-bold mb-4 mt-6">Sesi Foto dengan Ruang Kosong</h3>
-            <p>Meski dalam suasana duka dan belum mendapat kepastian hukum, keluarga Smith tetap menjalani sesi foto keluarga seperti yang telah dijadwalkan. Dalam formasi berdiri, mereka menyisakan sedikit ruang kosong di tengah barisan sebagai bentuk penghormatan terhadap \${namaKorban}.</p>
+            <h3 class="text-lg font-bold mb-4 mt-6">Sesi Foto Penghormatan</h3>
+            <p>Meski dalam suasana duka dan belum mendapat kepastian hukum, keluarga Smith tetap menjalani sesi foto keluarga untuk menghormati mendiang. Terlihat mereka menyisakan sedikit ruang kosong di tengah barisan seolah \${namaKorban} ikut berfoto bersama.</p>
 
-            <p>Beberapa hari setelah foto dicetak, muncul laporan bahwa siluet samar menyerupai wajah \${namaKorban} tampak di posisi ruang kosong tersebut. Tidak ada keterangan resmi terkait dugaan ini. Namun sumber keluarga menyebutkan bahwa cetakan foto tersebut telah dimusnahkan karena menimbulkan gangguan psikologis pada beberapa anggota keluarga.</p>
+            <p>Beberapa hari setelah foto dicetak, muncul laporan bahwa siluet samar menyerupai wajah \${namaKorban} tampak di posisi ruang kosong tersebut. Tidak ada keterangan resmi terkait dugaan ini. Namun sumber keluarga menyebutkan bahwa cetakan foto tersebut tidak dimusnahkan meskipun konon menimbulkan gangguan psikologis pada beberapa anggota keluarga.</p>
 
             <p>Kasus ini masih dalam tahap penyelidikan. Kepolisian menyatakan akan terus mengembangkan temuan untuk mengungkap apa yang sebenarnya terjadi dalam insiden yang kini menjadi perhatian luas masyarakat.</p>
             `;
