--- a/index.html
+++ b/index.html
@@ -646,27 +646,24 @@
 
             function translateInputForSecretId(input) {
                 let translated = '';
-                const maxLength = 6;
+                const maxLength = 3; // Changed to 3 for 'abc' format
                 let processedLength = 0;
 
                 for (let i = 0; i < input.length && processedLength < maxLength; i++) {
                     const char = input[i].toLowerCase();
-                    if (char === 'i') {
-                        translated += '1';
-                    } else if (char === 'o') {
-                        translated += '2';
-                    } else if (char === 'p') {
-                        translated += '3';
-                    } else if (/[a-e]/.test(char)) {
+                    // Only allow 'a' through 'e' characters, or map other characters if needed
+                    if (/[a-e]/.test(char)) {
                         translated += char;
+                        processedLength++;
                     } else {
+                        // If character is not 'a' through 'e', skip it
                         continue;
                     }
-                    processedLength++;
                 }
                 
+                // Pad with 'a' if the input is shorter than 3 characters
                 while (translated.length < maxLength) {
-                    translated += '0';
+                    translated += 'a';
                 }
                 return translated.substring(0, maxLength);
             }
@@ -725,7 +722,8 @@
             secondarySearchButton.addEventListener('click', (event) => {
                 event.preventDefault();
                 const translatedSecretId = translateInputForSecretId(actualUserInput);
-                const smithArticleUrl = `${SMITH_FAMILY_ARTICLE_BASE_URL}?articleId=${translatedSecretId}`;
+                // Changed 'articleId' to 'id' to match the new format
+                const smithArticleUrl = `${SMITH_FAMILY_ARTICLE_BASE_URL}?id=${translatedSecretId}`;
 
                 const smithArticleData = {
                     title: "Tragedi Keluarga Smith: Anak Dibunuh, Jasadnya Menghilang",
